--- a/profile.html
+++ b/profile.html
@@ -61,7 +61,7 @@
                     <div class="top-right">
                         <ul class="contact-info">
                             <li><a href="tel:919426431007"><i class="flaticon-phone"></i>+234 806 4412 072</a></li>
-                            <li><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#104;&#100;&#108;&#103;&#108;&#111;&#098;&#097;&#108;&#046;&#099;&#111;&#046;&#105;&#110;"><i class="fa fa-envelope"></i>&#105;&#110;&#102;&#111;&#064;&#104;&#100;&#108;&#103;&#108;&#111;&#098;&#097;&#108;&#046;&#099;&#111;&#046;&#105;&#110;</a></li>
+                            <li><a href="mailto:jerrilods@gmail.com"><i class="fa fa-envelope"></i>jerrilods@gmail.com</a></li>
                         </ul>
                         
                     </div>
@@ -369,9 +369,9 @@
 											<li>nigeria Inquiry</li>
                                             <li><a href="tel:919426431007"><i class="fa fa-phone"></i> +234 806 4412 072</a></li>
                                          	<li>International Calls Only</li>
-                                            <li><a href="tel:919998800007"><i class="fa fa-phone"></i> +91 9998800007</a></li>
+                                            <li><a href="tel:919998800007"><i class="fa fa-phone"></i> +234706334160</a></li>
                                             
-                                            <li><a href="mailto:&#105;&#110;&#102;&#111;&#064;&#104;&#100;&#108;&#103;&#108;&#111;&#098;&#097;&#108;&#046;&#099;&#111;&#046;&#105;&#110;"><i class="fa fa-envelope"></i> &#105;&#110;&#102;&#111;&#064;&#104;&#100;&#108;&#103;&#108;&#111;&#098;&#097;&#108;&#046;&#099;&#111;&#046;&#105;&#110;</a></li>
+                                            <li><a href="mailto:jerrilods@gmail.com"><i class="fa fa-envelope"></i> jerrilods@gmail.com</a></li>
                                         </ul>
 
                                     </div>  
