--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -131,8 +131,8 @@
                                     </li>
                                     <li><a href="nigerian-harvest-chart.html">nigeria Harvest Chart</a></li>
                                     <li id="photo-gallery"><a href="photo-gallery.html">Photo Gallery</a></li>
-                                    <li id="certificates"><a href="certificates.html">Certificates</a></li>
-                                    <li id=""><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li>
+                                     <!-- <li id="certificates"><a href="certificates.html">Certificates</a></li> -->
+                                    <!-- <li id=""><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li> -->
                                     <li id="inquiry"><a href="inquiry.html">Inquiry</a></li>
                                     <li id="contact-us"><a href="contact-us.html">Contact Us</a></li>
                                 </ul>
