--- a/index.html
+++ b/index.html
@@ -54,13 +54,7 @@
 
 <div class="page-wrapper">
 
-    <!-- Preloader -->
-  <!--  <div class="loader-wrap">
-        <div class="preloader"><div class="preloader-close">Preloader Close</div></div>
-        <div class="layer layer-one"><span class="overlay"></span></div>
-        <div class="layer layer-two"><span class="overlay"></span></div>        
-        <div class="layer layer-three"><span class="overlay"></span></div>        
-    </div>-->
+ 
 
     <header class="main-header header-style-one">
         <!-- Header Top -->
@@ -1057,7 +1051,7 @@
                                             <li><a href="nigerian-harvest-chart.html">nigeria Harvest Chart</a></li>
                                             <!--<li><a href="photo-gallery">Photo Gallery</a></li>-->
                                             <li><a href="certificates.html">Certificates</a></li>
-                                            <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li>
+                                            <!-- <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li> -->
                                             <li><a href="inquiry.html">Inquiry</a></li>
                                             <li><a href="contact-us.html">Contact Us</a></li>	
                                         </ul>
