--- a/products/hdl-pulses.html
+++ b/products/hdl-pulses.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <!-- Mirrored from www.hdlglobal.co.in/products/hdl-pulses by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:43:41 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 
 
@@ -44,13 +44,7 @@
 </head>
 <body>
 <div class="page-wrapper">
-    <!-- Preloader -->
-  <!--  <div class="loader-wrap">
-        <div class="preloader"><div class="preloader-close">Preloader Close</div></div>
-        <div class="layer layer-one"><span class="overlay"></span></div>
-        <div class="layer layer-two"><span class="overlay"></span></div>        
-        <div class="layer layer-three"><span class="overlay"></span></div>        
-    </div>-->
+ 
 
     <header class="main-header header-style-one">
         <!-- Header Top -->
@@ -550,7 +544,7 @@
                                             <li><a href="../nigerian-harvest-chart.html">nigeria Harvest Chart</a></li>
                                             <!--<li><a href="photo-gallery">Photo Gallery</a></li>-->
                                             <li><a href="../certificates.html">Certificates</a></li>
-                                            <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li>
+                                            <!-- <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li> -->
                                             <li><a href="../inquiry.html">Inquiry</a></li>
                                             <li><a href="../contact-us.html">Contact Us</a></li>	
                                         </ul>
