--- a/certificates.html
+++ b/certificates.html
@@ -4,7 +4,7 @@
 
 
 <!-- Mirrored from www.hdlglobal.co.in/certificates by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:48:22 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 
 
@@ -50,13 +50,7 @@
 
 <div class="page-wrapper">
 
-    <!-- Preloader -->
-  <!--  <div class="loader-wrap">
-        <div class="preloader"><div class="preloader-close">Preloader Close</div></div>
-        <div class="layer layer-one"><span class="overlay"></span></div>
-        <div class="layer layer-two"><span class="overlay"></span></div>        
-        <div class="layer layer-three"><span class="overlay"></span></div>        
-    </div>-->
+ 
 
     <header class="main-header header-style-one">
         <!-- Header Top -->
@@ -449,7 +443,7 @@
                                             <li><a href="nigerian-harvest-chart.html">nigeria Harvest Chart</a></li>
                                             <!--<li><a href="photo-gallery">Photo Gallery</a></li>-->
                                             <li><a href="certificates.html">Certificates</a></li>
-                                            <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li>
+                                            <!-- <li><a href="https://hdlglobal.co.in/blog/" target="_blank">Blog</a></li> -->
                                             <li><a href="inquiry.html">Inquiry</a></li>
                                             <li><a href="contact-us.html">Contact Us</a></li>	
                                         </ul>
