--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                         
                         <!--<div class="navbar-right-info">
                             <button type="button" class="theme-btn search-toggler"><span class="flaticon-search"></span></button>
-                            <div class="sidemenu-nav-toggler"><img src="assets/images/icons/icon-bar.png" alt=""></div>
+                            <div class="sidemenu-nav-toggler"><img src="assets/images/icons/icon-bar.png" alt=""></div
                         </div>-->
                     </div>
                 </div>
