--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
                                 </ul>
                             </div>
                         </nav>
+                       
                         <!-- Main Menu End-->
                         
                         <!--<div class="navbar-right-info">
@@ -223,6 +224,7 @@
                             <div class="sidemenu-nav-toggler"><img src="assets/images/icons/icon-bar.png" alt=""></div
                         </div>-->
                     </div>
+                    <div>GFGhey</div>
                 </div>
             </div>
         </div>
