--- a/products/sardine.html
+++ b/products/sardine.html
@@ -300,7 +300,24 @@
                         <div class="row col-md-6" >
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/beverages/milo.jpg" alt="AGC milo"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-titus.jpg" alt="AGC milo"></a>
+                                    </div>
+                                    <div class="lower-content">
+                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
+                                        <div class="content">
+                                            <a href="javascript:void(0);"><h4>Titus</h4></a>
+                                        </div>                                
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <h3>Titus </h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
+                                </div>
+                            </div>
+                            <div class="row col-md-6">
+                                <div class="inner-box col-md-6">
+                                    <div class="image">
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-milo.jpg" alt="AGC - bournvita"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
@@ -310,41 +327,75 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Milo beverage </h3>
+                                    <h3>Milo Sardine </h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/beverages/bournvita.jpg" alt="AGC - bournvita"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Bournvita</h4></a>
+                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Bournvita beverage </h3>
+                                    <h3>Safi Sardine</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/beverages/Ovaltine_800x.jpg" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Ovaltine</h4></a>
+                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Ovaltine beverage </h3>
+                                    <h3>Safi Sardine</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
+                                </div>
+                            </div>
+                            <div class="row col-md-6">
+                                <div class="inner-box col-md-6">
+                                    <div class="image">
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
+                                    </div>
+                                    <div class="lower-content">
+                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
+                                        <div class="content">
+                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
+                                        </div>                                
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <h3>Safi Sardine</h3>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
+                                </div>
+                            </div>
+                            <div class="row col-md-6">
+                                <div class="inner-box col-md-6">
+                                    <div class="image">
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
+                                    </div>
+                                    <div class="lower-content">
+                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
+                                        <div class="content">
+                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
+                                        </div>                                
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <h3>Safi Sardine</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
