add product details

--- a/products/sardine.html
+++ b/products/sardine.html
@@ -351,54 +351,38 @@
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-costa.jpg" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
+                                            <a href="javascript:void(0);"><h4>Costa</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Safi Sardine</h3>
+                                    <h3>Costa Sardine</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-geisha.jpg" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
+                                            <a href="javascript:void(0);"><h4>Geisha</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Safi Sardine</h3>
+                                    <h3>Geisha Sardine</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
-                            <div class="row col-md-6">
-                                <div class="inner-box col-md-6">
-                                    <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
-                                    </div>
-                                    <div class="lower-content">
-                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
-                                        <div class="content">
-                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
-                                        </div>                                
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3>Safi Sardine</h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
-                                </div>
-                            </div>
+                            
                         </div>
                         
                     </div>
