--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
                                               <ul>
                                                 <li><a href="./products/food-beverage.html">Food Beverages</a></li>
                                                 <li><a href="./products/sardine.html">Sardines Products</a></li>
-                                                <li><a href="#">caned beef products</a></li>
-                                                <li><a href="#">custard</a></li>
-                                                <li><a href="#">Beaty and cosmetic</a></li>
+                                                <li><a href="./products/jfi-canned-beef-products.html">caned beef products</a></li>
+                                                <li><a href="./products/custard.html">custard</a></li>
+                                                <li><a href="./products/beauty_cosmetic.html">Beaty and cosmetic</a></li>
                                                 <li><a href="products/spices_and_seasonals.html">Spices and Seasonal</a></li>
                                                 <li><a href="#">Honey</a></li>
-                                                <li><a href="#">Malt Drinks</a></li>
-                                                <li><a href="#">Buscuit and Snaks</a></li>
-                                                <li><a href="#">Tea and Food Drinks</a></li>
+                                                <li><a href="./products/maltdrinks.html">Malt Drinks</a></li>
+                                                <li><a href="./products/buscuits_snacks.html">Buscuit and Snaks</a></li>
+                                                <li><a href="./products/">Tea and Food Drinks</a></li>
                                                 <li><a href="#">Food Flour </a></li>
 
                                               </ul>
