--- a/products/jfi-canned-beef-products.html
+++ b/products/jfi-canned-beef-products.html
@@ -239,7 +239,8 @@
             <div class="cursor"></div>
             <div class="cursor-follower"></div>
         </div>
-    </header>  <section class="page-title" style="background-image: url(../assets/images/products/bg-9daf42699d9d8664b4dcf865a32351501602054106.jpg);">
+    </header>  
+    <section class="page-title" style="background-image: url(../assets/images/products/bg-9daf42699d9d8664b4dcf865a32351501602054106.jpg);">
         <div class="auto-container">
             <div class="content-box">
                 <div class="content-wrapper">
