add food drinks link

--- a/products/fooddrinks.html
+++ b/products/fooddrinks.html
@@ -38,7 +38,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-89449088-1');
-</script><title>AG-City Spices & Seasoning | JERRILODS NIGERIA Limited.</title>
+</script><title>AG-City Malt drink | JERRILODS NIGERIA Limited.</title>
 <meta name="keyword" description="AG-City Pulses">
 <meta name="description" description="AG-City Pulses">
 </head>
@@ -274,17 +274,18 @@
             <div class="cursor"></div>
             <div class="cursor-follower"></div>
         </div>
-    </header> <section class="page-title" style="background-image: url(../assets/images/products/bg-9daf42699d9d8664b4dcf865a32351501602054106.jpg);">
+    </header>
+      <section class="page-title" style="background-image: url(../assets/images/products/bg-9daf42699d9d8664b4dcf865a32351501602054106.jpg);">
         <div class="auto-container">
             <div class="content-box">
                 <div class="content-wrapper">
                     <div class="title">
-                        <h1>AG-City Spices & Seasoning</h1>
+                        <h1>AG-City Food Drinks</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../category.html">Products</a></li>
-                        <li>AG-City Spices & Seasonings</li>
+                        <li>AG-City Food Drinks</li>
                     </ul>
                 </div>                    
             </div>
@@ -301,88 +302,51 @@
                         <div class="row col-md-6" >
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/spices/know-cubes-seasoning.jpg" alt="AGC milo"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/fooddrinks/biggiedrink.jpg" alt="AGC bigi drink"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Knorr Seasoning</h4></a>
+                                            <a href="javascript:void(0);"><h4>Bigie Drink</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Knorr seasoning and spices </h3>
+                                    <h3>Biggie Food drink </h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
-
-                            <div class="row col-md-6" >
+                            <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/spices/onga-seasoning.webp" alt="AGC milo"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/fooddrinks/smoove-fooddrink.jpg" alt="AGC - smoove drink"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Onga Seasoning</h4></a>
+                                            <a href="javascript:void(0);"><h4>Smoove Drink</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Onga seasoning and spices </h3>
+                                    <h3>Smoove Food drink</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
-
-                            <div class="row col-md-6" >
+                            <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/spices/spice_supreme-spice.jpg" alt="AGC milo"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/fooddrinks/zobodrink-fooddrink.jpg" alt="AGC Zobo drink"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Spices supreme Seasoning</h4></a>
+                                            <a href="javascript:void(0);"><h4>Zobo Drink</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Spices Supreme seasoning and spices </h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
-                                </div>
-                            </div>
-
-                            <div class="row col-md-6" >
-                                <div class="inner-box col-md-6">
-                                    <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/spices/star-seasoning.jpg" alt="AGC milo"></a>
-                                    </div>
-                                    <div class="lower-content">
-                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
-                                        <div class="content">
-                                            <a href="javascript:void(0);"><h4>Maggi Seasoning</h4></a>
-                                        </div>                                
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3>Maggi seasoning and spices </h3>
-                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
-                                </div>
-                            </div>
-                            <div class="row col-md-6" >
-                                <div class="inner-box col-md-6">
-                                    <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/spices/thyme-spices.webp" alt="AGC milo"></a>
-                                    </div>
-                                    <div class="lower-content">
-                                        <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
-                                        <div class="content">
-                                            <a href="javascript:void(0);"><h4>Thyme Spices</h4></a>
-                                        </div>                                
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <h3>Thyme spices</h3>
+                                    <h3>Zobo Smoove Drink</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
