--- a/vision-value.html
+++ b/vision-value.html
@@ -79,7 +79,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li id="home"><a href="index.html">Home</a></li>
+                                    <li id="home"><a href="./index.html">Home</a></li>
                                     
                                     
                                     <li class="dropdown" id="about-us"><a href="javascript:void(0);">About Us</a>
