--- a/products/beauty_cosmetic.html
+++ b/products/beauty_cosmetic.html
@@ -102,8 +102,8 @@
                                                 <li><a href="#">Honey</a></li>
                                                 <li><a href="./products/maltdrinks.html">Malt Drinks</a></li>
                                                 <li><a href="./products/buscuits_snacks.html">Buscuit and Snaks</a></li>
-                                                 <li><a href="./products/fooddrinks.html">Tea and Food Drinks</a></li>
-                                                <li><a href="#">Food Flour </a></li>
+                                                <li><a href="./products/fooddrinks.html">Tea and Food Drinks</a></li>
+                                                <li><a href="./products/food_flour.html">Food Flour </a></li> 
 
                                               </ul>
                                           
