--- a/products/food_flour.html
+++ b/products/food_flour.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from www.hdlglobal.co.in/products/hdl-pulses by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:43:41 GMT -->
+<!-- Mirrored from www.hdlglobal.co.in/products/hdl-blended-spices by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:44:02 GMT -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
 
@@ -38,14 +38,13 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-89449088-1');
-</script><title>AG-City Pulses | JERRILODS NIGERIA Limited.</title>
-<meta name="keyword" description="AG-City Pulses">
-<meta name="description" description="AG-City Pulses">
+</script><title>AG-City Biscuits & Snacks | JERRILODS NIGERIA Limited.</title>
+<meta name="keyword" description="AG-City Blended Spices">
+<meta name="description" description="AG-City Blended Spices">
 </head>
 <body>
 <div class="page-wrapper">
  
-
     <header class="main-header header-style-one">
         <!-- Header Top -->
         <div class="header-top">
@@ -102,8 +101,8 @@
                                                 <li><a href="#">Honey</a></li>
                                                 <li><a href="./products/maltdrinks.html">Malt Drinks</a></li>
                                                 <li><a href="./products/buscuits_snacks.html">Buscuit and Snaks</a></li>
-                                                 <li><a href="./products/fooddrinks.html">Tea and Food Drinks</a></li>
-                                                <li><a href="#">Food Flour </a></li>
+                                                <li><a href="./products/fooddrinks.html">Tea and Food Drinks</a></li>
+                                                <li><a href="./products/food_flour.html">Food Flour </a></li> 
 
                                               </ul>
                                           
@@ -275,17 +274,18 @@
             <div class="cursor-follower"></div>
         </div>
     </header>
-      <section class="page-title" style="background-image: url(../assets/images/products/bg-9daf42699d9d8664b4dcf865a32351501602054106.jpg);">
+    
+    <section class="page-title" style="background-image: url(../assets/images/products/bg-c0423ae5a501fc3cee73eb99f38fddf91602054226.jpg);">
         <div class="auto-container">
             <div class="content-box">
                 <div class="content-wrapper">
                     <div class="title">
-                        <h1>AG-City Pulses</h1>
+                        <h1>AG-City Flour</h1>
                     </div>
                     <ul class="bread-crumb clearfix">
                         <li><a href="../index.html">Home</a></li>
                         <li><a href="../category.html">Products</a></li>
-                        <li>AG-City Pulses</li>
+                        <li>AG-City Flour</li>
                     </ul>
                 </div>                    
             </div>
@@ -302,85 +302,85 @@
                         <div class="row col-md-6" >
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-titus.jpg" alt="AGC milo"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products//biscuits/nereos-biscuits.png" alt="AGC milo"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Titus</h4></a>
+                                            <a href="javascript:void(0);"><h4>Nereos</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Titus </h3>
+                                    <h3>Nereos Biscuits </h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-milo.jpg" alt="AGC - bournvita"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/biscuits/carbin-biscuits.webp" alt="AGC - bournvita"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Milo</h4></a>
+                                            <a href="javascript:void(0);"><h4>Cabin biscuits</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Milo Sardine </h3>
+                                    <h3>Cabin biscuits </h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-safi.webp" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/biscuits/cream-crackers.png" alt="cream cracker"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Safi</h4></a>
+                                            <a href="javascript:void(0);"><h4>Cream crackers</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Safi Sardine</h3>
+                                    <h3>cream crackers</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-costa.jpg" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/biscuits/nasco-babana.jpg" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Costa</h4></a>
+                                            <a href="javascript:void(0);"><h4>Nasco Biscuits</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Costa Sardine</h3>
+                                    <h3>Nasco biscuits</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
                             <div class="row col-md-6">
                                 <div class="inner-box col-md-6">
                                     <div class="image">
-                                        <a href="javascript:void(0);"><img src="../assets/images/products/sardines/sardine-geisha.jpg" alt="AGC Ovaltine"></a>
+                                        <a href="javascript:void(0);"><img src="../assets/images/products/biscuits/rich-tea.jpeg" alt="AGC Ovaltine"></a>
                                     </div>
                                     <div class="lower-content">
                                         <div class="link-btn"><a href="javascript:void(0);"><i class="flaticon-right-arrow"></i></a></div>
                                         <div class="content">
-                                            <a href="javascript:void(0);"><h4>Geisha</h4></a>
+                                            <a href="javascript:void(0);"><h4>Rich Tea</h4></a>
                                         </div>                                
                                     </div>
                                 </div>
                                 <div class="col-md-6">
-                                    <h3>Geisha Sardine</h3>
+                                    <h3>Rich tea Biscuits</h3>
                                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae commodi non harum optio facilis excepturi, deleniti doloribus totam hic cupiditate necessitatibus delectus architecto doloremque ea aspernatur, voluptatem ullam deserunt?</p>
                                 </div>
                             </div>
@@ -538,6 +538,6 @@ https://wa.me/+2348064412072"><img src="../assets/images/whatsapp-button.png"></
 <!--End pagewrapper-->
 </body>
 
-<!-- Mirrored from www.hdlglobal.co.in/products/hdl-pulses by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:44:02 GMT -->
+<!-- Mirrored from www.hdlglobal.co.in/products/hdl-blended-spices by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 21 Jul 2022 23:44:21 GMT -->
 </html>
 <script>$('#product').addClass('current');</script>
