--- a/group-profile.html
+++ b/group-profile.html
@@ -69,7 +69,7 @@
                 <div class="inner-container clearfix">
                     <!--Logo-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="assets/images/LOGO-AGRO.png" alt=""></a></div>
+                        <div class="logo"><a href="../index.html"><img src="assets/images/LOGO-AGRO.png" alt=""></a></div>
                     </div>
                     <!--Nav Box-->
                     <div class="nav-outer clearfix">
@@ -80,7 +80,7 @@
                         <nav class="main-menu navbar-expand-md navbar-light">
                             <div class="collapse navbar-collapse show clearfix" id="navbarSupportedContent">
                                 <ul class="navigation clearfix">
-                                    <li id="home"><a href="./index.html">Home</a></li>
+                                    <li id="home"><a href="../index.html">Home</a></li>
                                     
                                     
                                     <li class="dropdown" id="about-us"><a href="javascript:void(0);">About Us</a>
