--- a/products/jfi-finished-goods.html
+++ b/products/jfi-finished-goods.html
@@ -71,7 +71,7 @@
                 <div class="inner-container clearfix">
                     <!--Logo-->
                     <div class="logo-box">
-                        <div class="logo"><a href="index.html"><img src="assets/images/LOGO-AGRO.png" alt=""></a></div>
+                        <div class="logo"><a href="../index.html"><img src="assets/images/LOGO-AGRO.png" alt=""></a></div>
                     </div>
                     <!--Nav Box-->
                     <div class="nav-outer clearfix">
